--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,50 @@ on:
       - 'feature/*'
 
 jobs:
+    build_image_job:
+        name: Docker Containerization
+        #needs: unit_test_job
+        #if: github.ref == 'refs/head/main'
+        runs-on: self-hosted
+        steps:
+            - name: Docker Login
+              uses: docker/login-action@v2.2.0
+              with:
+                username: ${{ vars.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASSWORD}}
+
+            - name: Docker Build
+              uses: docker/build-push-action@v4
+              with:
+                context: .
+                push: false
+                tags: ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:latest
+
+            - name: Docker Image Testing
+              run: |
+                  docker run --name mysql-app -itd \
+                      --env=MYSQL_ROOT_PASSWORD=${{ vars.DOCKER_USERNAME }}\
+                      -p 3306:3306 \
+                      ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:latest
+
+                  sleep 30s
+                  #curl http://localhost:3000/
+                  docker stop mysql-app && docker rm mysql-app
+
+            - name: Docker Push
+              uses: docker/build-push-action@v4
+              with:
+                context: .
+                push: true
+                tags: ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:latest
+
+
+            #- name: Docker Logout
+            #  run: sudo docker logout https://docker.io
     deploy_image_job:
         name: Deploy Docker Image
         #if: github.ref == 'refs/head/main'
-        #needs: build_image_job
+        needs: build_image_job
         outputs:
           APP_INGRESS_URL: ${{ steps.set-loadbalancer-host-id.outputs.APP_INGRESS_HOST}}
         runs-on: self-hosted
@@ -45,7 +85,7 @@ jobs:
               env:
                 NAMESPACE: ${{ vars.NAMESPACE }}
                 REPLICAS: ${{ vars.REPLICAS}}
-                IMAGE: IMAGE: ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:latest
+                IMAGE: ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:latest
 
             - name: Check Files
               run: |
