--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
         #if: github.ref == 'refs/head/main'
         runs-on: self-hosted
         steps:
+            - name: Checkout
+              uses: actions/checkout@v5
+              
             - name: Docker Login
               uses: docker/login-action@v2.2.0
               with:
