--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
     deploy_image_job:
         name: Deploy Docker Image
         #if: github.ref == 'refs/head/main'
-        needs: build_image_job
+        #needs: build_image_job
         outputs:
           APP_INGRESS_URL: ${{ steps.set-loadbalancer-host-id.outputs.APP_INGRESS_HOST}}
         runs-on: self-hosted
