--- a/kubernetes/development/deployment.yaml
+++ b/kubernetes/development/deployment.yaml
@@ -24,6 +24,10 @@ spec:
         - name: candlestick-mysql-app
           imagePullPolicy: Always
           image: _{_IMAGE_}_
+          resources:
+            limits:
+              memory: "512Mi"
+              cpu: "1500m"
           env:
             - name: MYSQL_ROOT_PASSWORD
               value: _{_MYSQL_PASS_}_
